removed MongoDB password

--- a/NoteBooks/NetflixRAG.ipynb
+++ b/NoteBooks/NetflixRAG.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "5e7499d6",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "786a41d1",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
     "\n",
     "\n",
     "vector_db = MongoDb(\n",
-    "    db_url=\"mongodb+srv://sivasubramani:bwarL33A6zbRighu@cluster0.4kcywr4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\",\n",
+    "    db_url=\"mongodb+srv://sivasubramani:cluster0.4kcywr4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0\",\n",
     "    database=\"agno\",\n",
     "    embedder=GeminiEmbedder(),\n",
     "    collection_name=\"vectorStore\"\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "id": "7563de63",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "id": "0336751c",
    "metadata": {},
    "outputs": [
@@ -82,71 +82,6 @@
       ],
       "text/plain": [
        "\u001b[34mINFO\u001b[0m Connected to MongoDB successfully.                                                                            \n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">INFO</span> Creating collection                                                                                           \n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[34mINFO\u001b[0m Creating collection                                                                                           \n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">INFO</span> Creating collection <span style=\"color: #008000; text-decoration-color: #008000\">'vectorStore'</span>.                                                                            \n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[34mINFO\u001b[0m Creating collection \u001b[32m'vectorStore'\u001b[0m.                                                                            \n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">INFO</span> Creating search index <span style=\"color: #008000; text-decoration-color: #008000\">'vector_index_1'</span>.                                                                       \n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[34mINFO\u001b[0m Creating search index \u001b[32m'vector_index_1'\u001b[0m.                                                                       \n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">INFO</span> Search index <span style=\"color: #008000; text-decoration-color: #008000\">'vector_index_1'</span> is ready.                                                                       \n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[34mINFO\u001b[0m Search index \u001b[32m'vector_index_1'\u001b[0m is ready.                                                                       \n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">INFO</span> Search index <span style=\"color: #008000; text-decoration-color: #008000\">'vector_index_1'</span> created successfully.                                                           \n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[34mINFO\u001b[0m Search index \u001b[32m'vector_index_1'\u001b[0m created successfully.                                                           \n"
       ]
      },
      "metadata": {},
@@ -181,11 +116,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">INFO</span> Inserted <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> documents successfully.                                                                            \n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">INFO</span> Using collection: vectorStore                                                                                 \n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[34mINFO\u001b[0m Inserted \u001b[1;36m1\u001b[0m documents successfully.                                                                            \n"
+       "\u001b[34mINFO\u001b[0m Using collection: vectorStore                                                                                 \n"
       ]
      },
      "metadata": {},
@@ -194,11 +129,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">INFO</span> Inserted <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> documents successfully.                                                                            \n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">INFO</span> Skipped <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span> existing/duplicate documents.                                                                       \n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[34mINFO\u001b[0m Inserted \u001b[1;36m1\u001b[0m documents successfully.                                                                            \n"
+       "\u001b[34mINFO\u001b[0m Skipped \u001b[1;36m3\u001b[0m existing/duplicate documents.                                                                       \n"
       ]
      },
      "metadata": {},
@@ -207,24 +142,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">INFO</span> Inserted <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span> documents successfully.                                                                            \n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">INFO</span> Added <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0</span> documents to knowledge base                                                                           \n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[34mINFO\u001b[0m Inserted \u001b[1;36m1\u001b[0m documents successfully.                                                                            \n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">INFO</span> Added <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span> documents to knowledge base                                                                           \n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[34mINFO\u001b[0m Added \u001b[1;36m3\u001b[0m documents to knowledge base                                                                           \n"
+       "\u001b[34mINFO\u001b[0m Added \u001b[1;36m0\u001b[0m documents to knowledge base                                                                           \n"
       ]
      },
      "metadata": {},
@@ -237,48 +159,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "44daa268",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28ca483d231e4fe3aee7fd97b4207fe6",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">INFO</span> Search completed. Found <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span> documents.                                                                          \n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[34mINFO\u001b[0m Search completed. Found \u001b[1;36m3\u001b[0m documents.                                                                          \n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
-      ],
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "agent.print_response(\"Out of all the movies in the knowledge base what are the Tamil movies in the list\", stream=True)"
    ]
@@ -288,184 +172,25 @@
    "execution_count": null,
    "id": "18eebab7",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "agent.cli_app()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a1b9cabc",
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> 😎 User </span>: </pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1m 😎 User \u001b[0m: "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca3c41b54b7d49179c628bf7daa74231",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">INFO</span> Search completed. Found <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span> documents.                                                                          \n",
        "</pre>\n"
       ],
       "text/plain": [
        "\u001b[34mINFO\u001b[0m Search completed. Found \u001b[1;36m3\u001b[0m documents.                                                                          \n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
-      ],
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> 😎 User </span>: </pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1m 😎 User \u001b[0m: "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36916afa4d7940b2a3d1a98e8b658d70",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">INFO</span> Search completed. Found <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span> documents.                                                                          \n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[34mINFO\u001b[0m Search completed. Found \u001b[1;36m3\u001b[0m documents.                                                                          \n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
-      ],
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> 😎 User </span>: </pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1m 😎 User \u001b[0m: "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c81dc2d76234c0181848ee7d3401fa3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
-      ],
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> 😎 User </span>: </pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1m 😎 User \u001b[0m: "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "347b40032afd4812a064068d8fc09ab0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
-      ],
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\"> 😎 User </span>: </pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[1m 😎 User \u001b[0m: "
       ]
      },
      "metadata": {},
@@ -473,13 +198,34 @@
     }
    ],
    "source": [
-    "agent.cli_app()"
+    "response = agent.run(\"Out of all the movies in the knowledge base what are the Tamil movies in the list\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a36cff47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The Tamil movies in the list are:\\n\\n*   Jeans\\n*   Minsara Kanavu\\n*   Avvai Shanmughi'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.content"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1b9cabc",
+   "id": "0698962a",
    "metadata": {},
    "outputs": [],
    "source": []
