--- a/NoteBooks/NetflixRAG.ipynb
+++ b/NoteBooks/NetflixRAG.ipynb
@@ -50,7 +50,8 @@
     "knowledge_base = CSVKnowledgeBase(\n",
     "    path=\"../CSV/netflix_data.csv\",\n",
     "    vector_db=vector_db,\n",
-    "    num_documents=10,  # Number of documents to return on search\n",
+    "    num_documents=10,  \n",
+    "\n",
     ")"
    ]
   },
